[package]
name = "ledit"
version = "0.1.0"
edition = "2018"
authors = ["Lorenzo Torres"]
repository = "https://github.com/LolzDEV/LEdit"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
tui = "0.15.0"
uuid = {version = "0.8.2", features = ["v4"]}
async-std = "1.9.0"
futures = "0.3"
lazy_static = "1.4.0"
